outputs/tsp_aco-aco/2026-03-07_19-37-45/problem_iter2_response9.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 15
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa1 in position 146: invalid start byte
